--- a/FrontEnd/html/basic-web-pages/basics.html
+++ b/FrontEnd/html/basic-web-pages/basics.html
@@ -12,12 +12,17 @@
     <h1>Learning HTML!</h1>
     <p>Learning some basic stuff</p>
     <h2>Second level heading</h2>
+    <hr />
     <p>some more text to write and read <em>learn fast</em> and <em><strong>work hard</strong></em>
         <ol>
             <li>item1</li>
             <li>item2</li>
             <li><p>test</p></li>
         </ol>
+    </p>
+    <p>Regards,
+    <br />
+    Anurag
     </p>
 </body>
 
