--- a/FrontEnd/html/basic-web-pages/hello-css/dummy.html
+++ b/FrontEnd/html/basic-web-pages/hello-css/dummy.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset='UTF-8' />
     <title>Dummy</title>
+    <link rel="stylesheet" href="./styles.css">
+    <style>
+        body {
+            color: aliceblue;
+        }
+    </style>
 </head>
 
 <body>
