--- a/FrontEnd/js/index.html
+++ b/FrontEnd/js/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Today's Date</title>
     <script>
-        let d= new Date();
-        alert(d);
+        // let d= new Date();
+        // alert(d);
     </script>
 </head>
  
 <body>
- 
+ <script>
+    let d = new Date();
+    document.body.innerHTML = "<h1>today's date is "+ d + "</h1>"
+ </script>
 </body>
  
 </html>
