--- a/FrontEnd/react/react-basics/index.html
+++ b/FrontEnd/react/react-basics/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>Hello React!</title>
-    </head>
-    <body>
-        <div id="root"></div>
-        <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
-        <script>
-            // Placeholder for our first component
-        </script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Hello React!</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script
+      crossorigin
+      src="https://unpkg.com/react@16/umd/react.production.min.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"
+    ></script>
+    <script>
+      class HelloWorld extends React.Component {
+        render() {
+          return React.createElement(
+            "div",
+            { id: "helloworld" },
+            "Hello World"
+          );
+        }
+      }
+      ReactDOM.render(React.createElement(HelloWorld),document.getElementById('root'))
+    </script>
+  </body>
 </html>
